tests/hulk/ok/minimal/forward_reference.hulk
function f(): Number { g(); }
function g(): Number { 42; }

{
    if (f() == 42) print("ok") else print("fail");
    if (g() == 42) print("ok") else print("fail");
}
