tests/hulk/errors/semantic/assign_undeclared.hulk
{
    z := 5;
    print(z);
}
